src/test/deca/context/valid/created/while/while.deca
// Description:
//      Compteur avec boucle while.
//
// Resultats:
//  0
//  1
//  2
//  3
//  4
//  5
//  6
//  7
//  8
//  9

{
    int x = 0;
    while (x < 10) {
        println(x);
        x = x + 1;
    }
}