src/test/deca/context/invalid/created/wrongTypes/wrong_type_condition_if_FLOAT.deca
// Description:
//  Condition non boolean
// 
// Resultats:
//    Ligne 7 : Condition should be a boolean
{
    if (5.3) {
        println("true");
    } else {
        println("false");
    }
}